<resources>
    <string name="app_name">PortScanner</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Port">Port</string>
    <string name="Host_name">Host Name</string>
    <string name="Connection_Timeout">Connection Timeout (in seconds)</string>
    <string name="Please_Wait">Please Wait</string>

    <string name="Scanning_Result">Scanning Results</string>
    <string name="Start_Scan">Start Scan</string>
    <string name="Stop_Scan">Stop Scan</string>
    <string name="Result">Result</string>
    <string name="Status">Status</string>
    <string name="Port_No">Port No.</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="All">All</string>
    <string name="Port_Name">Port Name</string>
    <string name="hint_host">192.168.1.4.245 or http/company.com</string>
    <string name="hint_port">22,45,4587,5000-6000</string>
    <string name="Scanning_">Scanning...</string>
    <string name="Please_enter_host_name">Please enter host name</string>
    <string name="Please_enter_port">Please enter port number</string>
    <string name="Please_enter_valid_port">Please enter valid port number</string>
    <string name="Please_enter_valid_host">Please enter valid host name</string>
    <string name="Please_enter_valid_port_range">Please enter valid port/range</string>
    <string name="Port_range_must_be_between_0_65536">Port range must be between 0 to 65536</string>
    <string name="Maximum_ports_allowed_are_thousand_only">Maximum ports allowed are 1000 only</string>


    <string name="Host">Host</string>

    <string name="No_ports_found">No ports found</string>
    <string name="History">History</string>

    <string name="Host_name_">Host Name :</string>
    <string name="No_of_ports">No. of Ports :</string>
    <string name="Open_Ports">Open Ports :</string>
    <string name="Closed_Ports">Closed Ports :</string>
    <string name="Scan_Status">Scan Status :</string>

    <string name="Complete_Scan">Complete Scan</string>
    <string name="Manually_Stopped">Manually Stopped</string>
    <string name="View_More">View More</string>
    <string name="are_you_sure_you_want_to_stop_this_scanning">Are you sure you want to stop this scanning ?</string>

</resources>
