<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/Host_name"
        android:visibility="gone"
        android:padding="@dimen/padding_5"
        android:textColor="@color/color_header_text"
        android:textSize="@dimen/text_size15" />

        <LinearLayout
            android:id="@+id/ll_detail"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_drawable"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/padding_7"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/Host_name_"
                    android:textColor="@color/color_port_text"
                    android:textSize="@dimen/text_size13" />
                <TextView
                    android:id="@+id/tv_host_name"
                    android:paddingLeft="@dimen/padding_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/Port_No"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size13" />
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="@dimen/padding_5"
                    android:text="0"
                    android:textColor="@color/color_port"
                    android:textSize="@dimen/text_size13" />

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/padding_7"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/No_of_ports"
                    android:textColor="@color/color_port_text"
                    android:textSize="@dimen/text_size13" />
                <TextView
                    android:id="@+id/tv_no_of_ports"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="@dimen/padding_5"
                    android:text="@string/Port_No"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size13" />

            </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:padding="@dimen/padding_7"
                   android:orientation="horizontal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:weightSum="1">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="left"
                       android:text="@string/Open_Ports"
                       android:textColor="@color/color_port_text"
                       android:textSize="@dimen/text_size13"
                       android:layout_weight="10.86" />
                   <TextView
                       android:id="@+id/tv_open_ports"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="left"
                       android:paddingLeft="@dimen/padding_5"
                       android:text="0"
                       android:textColor="@color/color_black"
                       android:textSize="@dimen/text_size13" />

               </LinearLayout>
               <LinearLayout
                   android:padding="@dimen/padding_7"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="left"
                       android:text="@string/Closed_Ports"
                       android:textColor="@color/color_port_text"
                       android:textSize="@dimen/text_size13" />
                   <TextView
                       android:id="@+id/tv_closed_ports"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="left"
                       android:paddingLeft="@dimen/padding_5"
                       android:text="0"
                       android:textColor="@color/color_black"
                       android:textSize="@dimen/text_size13" />

               </LinearLayout>
           </LinearLayout>

        </LinearLayout>
        <View
            android:background="@color/color_range_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"></View>

</LinearLayout>