<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:padding="@dimen/padding_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Host_name"
            android:textColor="@color/color_header_text"
            android:textSize="@dimen/text_size15" />
        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/et_host_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:background="@drawable/edit_text_drawable"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:scrollbars = "horizontal"
                android:padding="@dimen/padding_12"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_input_text"
                android:textSize="@dimen/text_size14" />
        </LinearLayout>
        </HorizontalScrollView>

       <LinearLayout
           android:id="@+id/ll_port"
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="wrap_content">
           <TextView

               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/margin_20"
               android:gravity="center"
               android:text="@string/Port"
               android:textColor="@color/color_header_text"
               android:textSize="@dimen/text_size15" />



           <HorizontalScrollView android:layout_width="fill_parent"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:id="@+id/et_port"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="@dimen/padding_10"
                       android:background="@drawable/edit_text_drawable"
                       android:maxLines="1"
                       android:scrollHorizontally="true"
                       android:padding="@dimen/padding_12"
                       android:textColor="@color/color_black"
                       android:textColorHint="@color/color_input_text"
                       android:textSize="@dimen/text_size14" />
               </LinearLayout>
           </HorizontalScrollView>

       </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/ll_scan_status"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Scan_Status"
                android:textColor="@color/color_header_text"
                android:textSize="@dimen/text_size15" />
            <TextView
                android:id="@+id/tv_scan_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_5"
                android:text="@string/Host_name"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size14" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/Result"
            android:textColor="@color/color_header_text"
            android:textSize="@dimen/text_size15" />
        <ListView
            android:layout_marginTop="@dimen/padding_10"
            android:id="@+id/lv_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

    

</LinearLayout>
